css/core.less
// Global imports
@import 'mixins.less';
@import 'reset.less';

// Touch devices
@import 'touch.less';

// Responsive breakpoints
@import '300px.less';
@import '400px.less';
@import '600px.less';
@import '700px.less';
@import '900px.less';
@import '1000px.less';
@import '1200px.less';

// Internot Exploder
//@import 'ie.less';


// Tab order testing.
:focus {
  outline:1px solid orange;
}

* {
  .transition(width 0.2s ease)
}

body {
  color: #000066;
  font-family:@copy-font;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: bold;
  font-family: @brand-font;
  line-height: 1;
  color:#0051a3;
  padding:0;
  margin:0 0 0.5em 0;
}

h1 {
  font-size:2.5em;
}
h2 {
  font-size:2em;
}
h3 {
  font-size:1.75em;
}
h4 {
  font-size:1.25em;
}
h5 {
  font-size:1.1em;
}

a {
  color:#c00;
}

.wrapper {
  #percentage > .width(280, 320);
  min-width:280px;
  max-width:1060px;
  margin:0 auto;
  padding:0;
}
.split {
  width:100%;
}

.offset {
  background:#f2f5f8;
  overflow:hidden;
  border-top:1px solid #d5d9df;
  border-bottom:1px solid #d5d9df;
  padding-top:30px;
  padding-bottom:30px;
  .bdr-1, .bdr-2, .bdr-3, .bdr-4 {
    #border > .shadow(1px 1px 2px #d6dde7);
  }
  .bg {
    background:white;
    .wrap {
      #gradient > .clear;
    }
  }
  ul.tabs li {
    #border > .shadow(2px 2px 2px #d6dde7);
  }
}

.offset-inner {
  overflow: hidden;
  width: 100%;
}

.logo {
  margin-top:1em;
}

#login{
  clear:both;
}

.nav-main {
  padding:0px;
  li {
    float:left;
    width:100%;
    margin:.1em .1em;
    border:1px solid #d4dbe3;
    text-decoration:none;
    #border > .radius(0.2em);
    text-decoration:none;
    font-family:Calibri, Verdana, Arial, sans-serif;
    font-weight:bold;
    font-size:125%;
    #gradient > .linear-double(#f2f5f8, #f2f5f8, #e5eaf1);
    a {
      display:block;
      padding:0 0.72em;
      text-decoration:none;
      color:#004ca0;
    }
  }
}

.home-link {
  position:absolute;
  top:0;
  right:0;
}

.csso {
  padding-top:.75em;
  clear:both;
}

#login {
  font-size:75%;
  label {
    margin-bottom:0.25em;
  }
}

#csso-login {
  margin-bottom:0.25em;
  max-width:140px;
}

.register {
  font-size:75%;
  margin-bottom:0.25em;
}

#metafaq {
  legend, label {
    display:none;
  }
  fieldset {
    border:0;
  }
  .question input, .question select {
    width:100%;
    margin-bottom:0.5em;
  }
}

.metafaq-question {
  width:100%;
}

.panel {
  p, li {
    margin-bottom:0.5em;
  }
  li {
    margin-left:1em;
  }
}

.type-4 .panel, .type-3 .panel, .type-2 .panel, .type-1 .panel {
  float:left;
  padding-top:10px;
  padding-bottom:10px;
  #percentage > .padding-horizontal(10, 220); //TODO:  mobile grid
  margin-bottom:20px;
}
.type-1 .nav {
  padding-left:0;
  padding-right:0;
  width:100%;
}

.bdr-1, .bdr-2, .bdr-3, .bdr-4 {
  border:1px solid #d6dde7;
}

.wrap {
  display:inline-block;
  width:100%;
}

.bg .wrap {
  #gradient > .linear-double(#ebebec, #fff, #ebebec);
}

.nowrap {
  border:1px solid #d5d9df;
  padding:0.5em 2%;
  #gradient > .linear-double(#f2f5f8, #fff, #f2f5f8);
  margin-bottom:1em;
}

.img {
  img {
    display:block;
    margin-left:auto;
    margin-right:auto;
    max-width:100%;
  }
}

.cta li {
  list-style-type:none;
  margin:0;
}

.supplimental .item {
  clear:both;
}

.all-products {
 .nav {
    display:inline-block;
    width:100%;
    margin-top:0.5em;
  }
  ol {
    padding-left: 1em;
    text-indent: -1em;
  }
}


.menu li{
  margin-bottom:1em;
  color:#c00;
  a {
    color:#c00;
    text-decoration:none;
    &:before {
      content: "\00BB \0020";
    }
  }
}

.aside .item {
  padding:0 1%;
  a {
    color:#c00;
    text-decoration:none;
  }
}


.footer {
  .nav {
    li {
      float:left;
      border:1px solid #d5d9df;
      width:49%; //TODO: mobile grid
      margin:0;
      text-decoration:none;
    }
    a {
      display:block;
      text-decoration:none;
      padding:6% 0 6% 6%;
    }
  }
}

.copyright {
  margin-top:20px;
  font-size:75%;
  float:right;
  #percentage > .margin-right(20, 920);
}

#nav-secondary {
  font-family: @brand-font;
  font-size:125%;
  li {
    clear: both;
    color: #0051A3;
    display: block;
    font-weight: bold;
    margin-bottom: 0;
    margin-left:0;
    padding: 10px 0;
  }
  a {
    text-decoration:none;
    display:block;
    border:1px solid #D4DBE3;
    #gradient > .linear-double(#f2f5f8, #f2f5f8, #e4ebf1);
    padding:0.25em;
    #border > .radius(0.2em);
  }
}


.type-2 .read-more, .type-3 .read-more, .type-4 .read-more {
  clear: both;
  display: block;
  margin-left: -4px !important;
  margin-right: -4px !important;
  padding-bottom: 0;
  padding-top: 7px;
  position: relative;
}

.js .read-more div.readMoreContent, .js .rmc, .js .convert, .dev, .js .simple_overlay, .js .products-carousel .product, #success {
  display: none;
}

.read-more h3 {
  font-size: 1.5em;
  line-height: 1;
  margin-bottom: 5px;
  padding-top: 0 !important;
  text-transform: uppercase;
}

/* Tabs */
ul.tabs { 
  padding: 10px 0 0 0 !important;
  margin: 0 0 0 10px;
  float: left;
  li { 
    list-style-type:none;
    float: left; padding: 0; margin: 0 10px 0 0;
    background-image: none;
    border: 1px solid #dadada; 
    border-bottom:0;
    #border > .radius(4px 4px 0 0);
    a { 
      font-family: Arial,Helvetica,sans-serif; 
      display: block !important;
      width: auto; 
      padding: 10px 10px; 
      border: 4px solid #fff; 
      border-bottom: 0;
      color:#006; 
      text-decoration: none;
      #border > .radius(4px 4px 0 0);
    }
    &.current {
      a {
        background: white;
      }
      div { 
        background: white ; z-index: 200;
      }
    }
    div { 
      background: #fff; 
      border-left: 4px solid #fff; 
      border-right: 4px solid #fff; 
      padding: 0 10px; height: 9px;  
      position: relative; 
      bottom: -5px; 
      margin-top: -5px;
      z-index: -10;
    }
  }
 
}

.elh li {
  width:49%;
  float:left;
  margin-left:0;
}

.js .panes {
  display:none;
  h2 {
    border:1px solid #d4dbe3;
    #gradient > .linear-double(#f2f5f8, #f2f5f8, #e4ebf1);
    clear:both;
    padding-left:1em;
    width:90%;
    #border > .shadow(1px 1px 2px #d6dde7);
  }
}


@import 'buttons.less';

@import 'tables.less';


/* ========== content hiding ======================= */


#relaxfull { display:none; }
#fullsite { display:inherit; }

.wide-0, .wide-1 {
  display:none !important;
}
.narrow-0 {
  display:inherit !important;
}

/* ================ Responsive ========================*/

@media screen and (min-width:320px) {
  .min-width_320px();
}

@media screen and (max-width:360px) {
  .min-width_360px();
}

@media screen and (min-width:460px) {
  .min-width_460px();
}

@media screen and (min-width:660px) {
  .min-width_660px();
}

@media screen and (min-width:768px) {
  .min-width_768px();
}

@media screen and (min-width:920px) {
  .min-width_920px();
}

@media screen and (min-width:1000px) {
  .min-width_1000px();
}

@media screen and (min-width:1024px) {
  .min-width_1024px()
}

@media screen and (min-width:1200px) {
  .min-width_1200px();
}

.wide {
  .min-width_768px();
  .min-width_920px();
  .wrapper, #content {
    width:960px;
  }
  .nav-main {
    width:900px;
    margin-left:30px;
  }
  #relaxfull { display:inherit; }
  #fullsite { display:none; }
}



/* ================ Touch devices =====================*/

.touch {
  .touch_support();
}

/* ================ Other =============================*/

.clearboth { clear:both; }

